[package]
name = "zenbuser"
version = "0.1.2"
edition = "2024"
license = "Unlicense"

[dependencies]
anyhow = "1"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
